loin registration recover password owner profile and dashboard design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BookMyMeal</string>
+    <string name="rcvrpsrd"> A link will be sent to your mail to reset your password </string>
 </resources>
