--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BookMyMeal</string>
     <string name="rcvrpsrd"> A link will be sent to your mail to reset your password </string>
+    <string name="signup">Don\'t have an account?|Sign Up|</string>
+    <string name="login">Log In</string>
 </resources>
